2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/htaccess: Trying the IncludesNoExec option instead 
	of Includes.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/htaccess: Added a handler for .shtml files, 
	to try to get SSI working for evolution/.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/htaccess: Added the Includes option, trying to 
	allow server-side includes for projects.gnome.org/evolution/.
	We might need some extra stuff here to handle shtml file exentsions, 
	but we will see.
	This was probably in the server configuration before.

2008-11-13  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/Makefile.am:
	* projects.gnome.org/htaccess: Added this, containing 
	maybe-useful stuff from www.gnome.org/htaccess. The common rules 
	seem to install this as .htaccess automatically.

2008-11-13  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html: 
	  populate the cheese 2.25.1 release

2008-11-12  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/: Really correct the urlpath values in the 
	Makefile.am files, so everything is installed under projects.gnome.org/.

2008-11-11  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/gnumeric/Makefile.am: Commented out the attempt 
	to write an ls list to the files file, because it breaks the build.
	Maybe that file needs to be in svn.

2008-11-11  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Mentioned projects.gnome.org/css/Makefile.am.

2008-11-11  Murray Cumming  <murrayc@murrayc.com>

	* Moved www.gnome.org/projects/ to projects.gnome.org/,
	changing the urlpath appropriately in the Makefile.am files.
	Copied the css directory from www.gnome.org/ to projects.gnome.org/.
	We now need to change the web server configuration to host this.

2008-11-03  Murray Cumming  <murrayc@murrayc.com>
