@@ -1,3 +1,8 @@
+2008-11-18  Murray Cumming  <murrayc@murrayc.com>
+
+	* sql/gnomeweb.sql: Removed this. Whatever it was used for 8 years ago, 
+	it does not seem to be used now.
+
 2008-11-14  Murray Cumming  <murrayc@murrayc.com>
 
 	* projects.gnome.org/htaccess: Trying the IncludesNoExec option instead 
